--- a/index.html
+++ b/index.html
@@ -14,26 +14,25 @@
 		<main>
 			<header>
 				<div>
-					<img src="assets/img/will-blue.jpg" alt="Will Muijrers">
+					<img src="assets/img/foto.jpg" alt="Will Muijrers">
 				</div>
 
-				<h1>Web developer &#38; user experience designer</h1>
+				<h1> 17 jaar, woont in Heerlen</h1>
 			</header>
 
-			<p>Currently teaching front-end technologies at <a href="https://mamdt.nl/" target="_blank"><span>Zuyd Hogeschool</span></a>, former co-founder and developer at <a href="https://saus.co/" target="_blank"><span>Saus</span></a>.</p>
-			<p>Proud builder of <a href="http://www.burgerkrachtlimburg.nl" target="_blank"><span>burgerkrachtlimburg.nl</span></a>, <a href="http://www.laviedor.nl" target="_blank"><span>laviedor.nl</span></a>, <a href="http://www.cnme.nl/" target="_blank"><span>CNME.nl</span></a> and many more.</p>
-
+			<p>Ik studeer bij<a href="https://mamdt.nl/" target="_blank"><span> Zuyd Hogeschool</span></a>, vorige school was<a href="https://www.grotius-lvo.nl" target="_blank"><span> Grotius</span></a>.</p>
+		
 
 
 			<footer>
-				<p>Contact me for team based web projects <span class="emoji rock">🤘</span></p>
+				<p> Slide in de dm <span class="emoji rock">🤘</span></p>
 
 				<div class="wrapper-cta">
-				<a href="mailto:will.muijrers@zuyd.nl" class="cta">
-					<span class="emoji mail">✉️</span> <span class="line">will.muijrers@zuyd.nl</span>
+				<a href="mailto:p.kreijns@ziggo.nl" class="cta">
+					<span class="emoji mail">✉️</span> <span class="line">p.kreijns@ziggo.nl</span>
 			  </a>
-					<a href="https://github.com/willmuijrers" target="_blank" class="cta">
-				  <span class="emoji alien">👽</span> <span class="line">github.com/willmuijrers</span>
+					<a href="https://github.com/pepijnkreijns" target="_blank" class="cta">
+				  <span class="emoji alien">👽</span> <span class="line">github.com/pepijnkreijns</span>
 			  </a>
 					
 				</div>
